# PerceptionMetrics

./: .gitignore  README.md  app.py  pyproject.toml
additional_envs/: pyproject-lsk3dnet.toml  pyproject-sphereformer.toml
docs/: package-lock.json
docs/_data/: navigation.yml
docs/_pages/: datasets.md  metrics.md  models.md  usage.md
docs/py_docs/source/api/: perceptionmetrics.datasets.rst
examples/: eval_preds.py  tutorial_cityscapes_image_segmentation.ipynb  tutorial_image_detection.ipynb  tutorial_image_segmentation.ipynb  tutorial_nuimages_detection.ipynb  tutorial_nuimages_segmentation.ipynb  tutorial_semanticKITTI_lidar_segmentation.ipynb
perceptionmetrics/cli/: __init__.py  batch.py  eval_model.py  eval_preds.py
perceptionmetrics/datasets/: __init__.py  cityscapes.py  detection.py  nuimages.py  segmentation.py  semantickitti.py
perceptionmetrics/models/: __init__.py  torch_detection.py  torch_segmentation.py
tabs/: dataset_viewer.py  evaluator.py  inference.py
tabs/tasks/: utils.py
tabs/tasks/image_detection/: __init__.py  dataset_viewer.py  evaluator.py  inference.py  sidebar.py
tabs/tasks/image_segmentation/: dataset_viewer.py  evaluator.py  inference.py  sidebar.py
tabs/tasks/lidar_segmentation/: dataset_viewer.py  evaluator.py  inference.py  sidebar.py
tests/: test_datasets_perception.py  test_detection_metrics.py  test_yolo.py
